# treason

./: README.md  main.py  pyproject.toml
treeson/: cli.py
